<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <include
        android:id="@+id/search_title"
        layout="@layout/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/tllayout_search"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <ImageView
                android:id="@+id/iv_kinwork"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:visibility="visible"
                app:srcCompat="@mipmap/kinwork"
                android:contentDescription="@string/image_view_search_displayname"/>

            <TextView
                android:id="@+id/tv_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_vertical"
                android:text="@string/title_Search_keyword"
                android:textColor="@color/but_blue"
                android:textSize="15sp" />

            <!--填充用star-->
            <!--            <EditText-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="0dp"-->
            <!--                android:visibility="gone"-->
            <!--                android:background="@drawable/ic_shape" />-->
            <!--填充用end-->
            <TableLayout
                android:id="@+id/tl_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_shape"
                android:stretchColumns="0">

                <TableRow
                    android:background="@null">
                    <EditText
                        android:id="@+id/et_keyword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@null"
                        android:text=""
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:cursorVisible="false"
                        android:hint="@string/hint_Search_input"
                        android:textColor="@color/background_holo_dark"
                        android:inputType="text"
                        android:autofillHints="" />


                    <ImageView
                        android:id="@+id/iv_clear_keyword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="5dp"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_cancel"
                        android:contentDescription="@string/image_view_search_displayname" />

                </TableRow>

            </TableLayout>


            <TextView
                android:id="@+id/tv_worklocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/title_Search_position"
                android:textColor="@color/but_blue" />

            <TableLayout
                android:id="@+id/tl_worklocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_shape"
                android:gravity="center_vertical"
                android:stretchColumns="0">

                <TableRow
                    android:background="@null">
                    <EditText
                        android:id="@+id/et_worklocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:background="@null"
                        android:text=""
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:cursorVisible="false"
                        android:hint="@string/hint_Search_position"
                        android:textColor="@color/background_holo_dark"
                        android:autofillHints=""
                        android:inputType="text" />


                    <ImageView
                        android:id="@+id/iv_clear_worklocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:tag="location"
                        android:visibility="visible"
                        android:src="@drawable/ic_location_on"
                        android:contentDescription="@string/image_view_search_displayname" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/bu_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginTop="30dp"
                app:backgroundTint="@color/but_blue"
                android:text="@string/title_Search_buttun"
                android:textColor="@color/colorLight"
                android:textSize="15sp" />
        </TableLayout>

        <ListView
            android:id="@+id/lv_gethint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="450dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/ic_shape"
            android:visibility="gone" />

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>